src/components/Landing.css
video {
    object-fit: cover;
    width: 100%;
    height: 100%;
    position: fixed;
    z-index: -1;
  }
  
  .landing-container {
    height: 100vh;
    width: 100%;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, 0.2);
    object-fit: contain;
  }
  
  .landing-container > h1 {
    color: #fff;
    font-size: 100px;
    margin-top: -100px;
  }
  
  .landing-container > p {
    margin-top: 8px;
    color: #fff;
    font-size: 32px;
    font-family: 'Roboto', sans-serif;
  }
  
  @media screen and (max-width: 960px) {
    .landing-container > h1 {
      font-size: 70px;
      margin-top: -150px;
    }
  }
  
  @media screen and (max-width: 768px) {
    .landing-container > h1 {
      font-size: 50px;
      margin-top: -100px;
    }
  
    .landing-container > p {
      font-size: 30px;
    }
  }
  

